# ArUcoMarkers

./: CMakeLists.txt  README.md
src/: calibrate.cpp  detect_aruco.cpp  detector_parameters.yml  draw_cube.cpp  generate_board.cpp  generate_marker.cpp  pose_estimation.cpp
